tests/NormalTests/paczka1/fuzzy1/22775474.err
Error in line 13: VzMBj A288 91,1
Error in line 11: yhRZow5J7h S499 32,2
Error in line 24: vJUwtii S498 6,9
